# sdx-fastapi-boilerplate

./: .dockerignore  .editorconfig  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  run.py
.github/scripts/: check_version.py  increment_version.py
.github/workflows/: check-version.yaml  check-version.yml  ruf-lint-format.yml  ruff-lint-format.yaml
app/: __init__.py  config.py  main.py  routes.py  settings.py
app/facades/: loggy.py
app/meta/: singleton_meta.py
app/util/: get_version.py
scripts/: check_version.py
