[project]
name = "sdx-fastapi-boilerlate"
version = "0.2.0"
description = "A boilerplate for a FastAPI service"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "pydantic-settings>=2.9.1",
    "pyyaml>=6.0.2",
    "sdx-gcp>=1.4.5",
    "tabulate>=0.9.0",
    "toml>=0.10.2",
    "typer>=0.15.3",
    "uvicorn>=0.34.2",
]

[tool.uv.sources]
sdx-gcp = { index = "sdx-repo" }

[[tool.uv.index]]
name = "sdx-repo"
url = "https://europe-west2-python.pkg.dev/ons-sdx-ci/sdx-python-packages/simple/"

[dependency-groups]
dev = [
    "ruff>=0.11.7",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-xdist>=3.6.1"
]
