[project]
name = "sdx-fastapi-boilerlate"
version = "0.2.14"
description = "A boilerplate for a FastAPI service"
requires-python = "==3.13.*"
dependencies = [
    "fastapi>=0.115.12",
    "pydantic-settings>=2.9.1",
    "pyyaml>=6.0.2",
    "sdx-base==0.2.1",
    "tabulate>=0.9.0",
    "typer>=0.15.3",
    "uvicorn>=0.34.2",
    "toml>=0.10.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-xdist>=3.6.1",
]

lint = [
    "ruff>=0.11.7",
]

version-check = [
 "toml>=0.10.2",
 "tomlkit>=0.13.3",
]

[tool.uv.sources]
sdx-base = { index = "sdx-repo" }

[[tool.uv.index]]
name = "sdx-repo"
url = "https://europe-west2-python.pkg.dev/ons-sdx-ci/sdx-python-packages/simple/"


[tool.ruff]
line-length = 121
exclude = [ "lib", "__pycache__", ".venv",]

[tool.ruff.lint]
extend-select = [ "E303", "W391", "W292", "E302"]
preview = true

